Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/MostSpecific01.out
MostSpecific01.java:23:9: compiler.err.ref.ambiguous: m, kindname.method, m(Test.IntMapper,java.lang.String), Test, kindname.method, m(Test.LongMapper,java.lang.Integer), Test
1 error
